--- a/BasicApp/frontend/index.html
+++ b/BasicApp/frontend/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello from frontend served by Backend !</h1>
-    <button id="btn">Click me</button>
-    <p id="msg"></p>
+    <h1>Simple CRUD operations</h1>
+    <input type="text" id="itemInput" placeholder="Enter item name">
+    <button id="btn" onclick="addItem()">Add Item</button>
+    <h2>Item List</h2>
+    <ul id="itemList"></ul>
+    <!-- <p id="msg"></p> -->
+     <!-- <img src="" alt="Random dog Image" id="img"> -->
     <script src="script.js"></script>
 </body>
 </html>
