--- a/ToDoApp/frontend/index.html
+++ b/ToDoApp/frontend/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDoApp</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title> TO-DO APP</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1>This is the to do app</h1>
-    <input type="text" id="task" placeholder="Enter Next task to do ">
-    <button id="addTaskBtn" onclick="createTask()">Add task</button>
-    <h2>Task to do </h2>
-    <ul id="taskList" ></ul>
+    <h1>📝 Task Manager</h1>
+
+    <div class="container">
+        <label for="task">New Task</label>
+        <input type="text" id="task" placeholder="What do you want to do today?">
+        <button onclick="addTask()">Add Task</button>
+
+        <ul id="taskList"></ul>
+    </div>
+
     <script src="script.js"></script>
 </body>
-
 </html>
